<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NVidia</string>

    <string name="databaseSizeLabel">Tamanho do Database</string>

    <string name="titleInput">Insira as informações do seu projeto</string>

    <string name="bestOptionLabel">Melhor Opção encontrada:</string>

    <string name="bestCloudOptionLabel">Melhor Opção de Cloud:</string>

    <string name="bestServerOptionLabel">Melhor opção de servidor fisico:</string>

    <string name="SpinnerTitle1">Tamanho do Database</string>
    <string name="SpinnerTitle2">Tamanho do Time</string>
    <string name="SpinnerTitle3">Projetos Simultaneos</string>
    <string name="SpinnerTitle4">Tipo de Projeto</string>
    <string name="SpinnerTitle5">Tipo de uso</string>

    <string-array name="databaseSizeArray">
        <item>100 Gb</item>
        <item>200 Gb</item>
        <item>300 Gb</item>
        <item>400 Gb</item>
        <item>500 Gb</item>
        <item>600 Gb</item>
        <item>700 Gb</item>
        <item>800 Gb</item>
        <item>900 Gb</item>
        <item>10 Tb</item>
        <item>20 Tb</item>
        <item>30 Tb</item>
        <item>40 Tb</item>
        <item>50 Tb</item>
        <item>60 Tb</item>
        <item>70 Tb</item>
        <item>80 Tb</item>
        <item>90 Tb</item>
        <item>100 Tb</item>

    </string-array>
    <string-array name="teamSizeArray">
        <item>Tamanho do Time</item>
        <item>10 pessoas</item>
        <item>20 pessoas</item>
        <item>30 pessoas</item>
        <item>40 pessoas</item>
        <item>50 pessoas</item>
        <item>60 pessoas</item>
        <item>70 pessoas</item>
        <item>80 pessoas</item>
        <item>90 pessoas</item>
        <item>100 pessoas</item>
    </string-array>

    <string-array name="CurrentProjectSizeArray">
        <item>Projetos simultaneos</item>
        <item>1 projeto</item>
        <item>2 projetos</item>
        <item>3 projetos</item>
        <item>4 projetos</item>
        <item>5  ou mais projetos</item>
    </string-array>

    <string-array name="ProjectTypeArray">
        <item>Tipo de Projeto</item>
        <item>Análise de imagem</item>
        <item>Vídeo</item>
        <item>Texto</item>
        <item>Voz</item>
        <item>Analytics</item>
        <item>Big data</item>
    </string-array>

    <string-array name="usageTypeArray">
        <item>Tipo de uso</item>
        <item>Treinamento</item>
        <item>Inferencia</item>
        <item>Treinamento + inferencia</item>
    </string-array>
</resources>
